lib/src/epic_cash_wallet_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>(
  symbol: '_listener_cancel',
)
external ffi.Pointer<ffi.Char> epic_cash_listener_cancel(
  ffi.Pointer<ffi.Void> handler,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>(
  symbol: '_listener_is_running',
)
external ffi.Pointer<ffi.Char> epic_cash_listener_is_running(
  ffi.Pointer<ffi.Void> handler,
);

/// Release a string returned by this library. Accepts NULL.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void epic_cash_string_free(ffi.Pointer<ffi.Char> value);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> get_mnemonic();

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
    )>()
external ffi.Pointer<ffi.Char> rust_create_tx(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> amount,
  ffi.Pointer<ffi.Char> to_address,
  ffi.Pointer<ffi.Char> secret_key_index,
  ffi.Pointer<ffi.Char> epicbox_config,
  ffi.Pointer<ffi.Char> confirmations,
  ffi.Pointer<ffi.Char> note,
  ffi.Pointer<ffi.Char> return_slate_flag,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rust_delete_wallet(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> config,
);

@ffi.Native<
    ffi.Pointer<ffi.Void> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Void> rust_epicbox_listener_start(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> epicbox_config,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rust_get_chain_height(
  ffi.Pointer<ffi.Char> config,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
    )>()
external ffi.Pointer<ffi.Char> rust_get_tx_fees(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> amount,
  ffi.Pointer<ffi.Char> min_confirmations,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
    )>()
external ffi.Pointer<ffi.Char> rust_get_wallet_address(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> index,
  ffi.Pointer<ffi.Char> epicbox_config,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rust_open_wallet(
  ffi.Pointer<ffi.Char> config,
  ffi.Pointer<ffi.Char> password,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
    )>()
external ffi.Pointer<ffi.Char> rust_recover_from_mnemonic(
  ffi.Pointer<ffi.Char> config,
  ffi.Pointer<ffi.Char> password,
  ffi.Pointer<ffi.Char> mnemonic,
  ffi.Pointer<ffi.Char> name,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rust_tx_cancel(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> tx_id,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rust_tx_finalize(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> slate_json,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rust_tx_receive(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> slate_json,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
    )>()
external ffi.Pointer<ffi.Char> rust_tx_send_http(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> selection_strategy_is_use_all,
  ffi.Pointer<ffi.Char> minimum_confirmations,
  ffi.Pointer<ffi.Char> message,
  ffi.Pointer<ffi.Char> amount,
  ffi.Pointer<ffi.Char> address,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rust_txs_get(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> refresh_from_node,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rust_validate_address(
  ffi.Pointer<ffi.Char> address,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
    )>()
external ffi.Pointer<ffi.Char> rust_wallet_balances(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> refresh,
  ffi.Pointer<ffi.Char> min_confirmations,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
    )>()
external ffi.Pointer<ffi.Char> rust_wallet_scan_outputs(
  ffi.Pointer<ffi.Char> wallet,
  ffi.Pointer<ffi.Char> start_height,
  ffi.Pointer<ffi.Char> number_of_blocks,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
      ffi.Pointer<ffi.Char>,
    )>()
external ffi.Pointer<ffi.Char> wallet_init(
  ffi.Pointer<ffi.Char> config,
  ffi.Pointer<ffi.Char> mnemonic,
  ffi.Pointer<ffi.Char> password,
  ffi.Pointer<ffi.Char> name,
);
